2008-09-29  Sam Steingold  <sds@gnu.org>

	* modules/matlab/wrap.lisp (matfile-content): use MEMORY-AS
	instead of WITH-C-VAR+CAST for efficiency
	Suggested by "Hoehle, Joerg-Cyril" <Joerg-Cyril.Hoehle@t-systems.com>

2008-09-26  Sam Steingold  <sds@gnu.org>

	* m4/general.m4 (CL_CANONICAL_HOST_CPU): better mips detection,
	from the debian ffcall patch

2008-09-26  Sam Steingold  <sds@gnu.org>

	* version.sh: 2.46++ (2008-09-23)

2008-09-26  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (path_truncate, stream_truncate)
	[WIN32_NATIVE]: clarify (simplify?) logic

2008-09-24  Sam Steingold  <sds@gnu.org>

	* clhs.lisp (open-http): also include port number in the Host header
	Reported by Raymond Toy <raymond.toy@ericsson.com>

2008-09-24  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (path_truncate) [WIN32_NATIVE]: fix logic

2008-09-23  Sam Steingold  <sds@gnu.org>

	* modules/regexp/regexi.c (REGEXP-EXEC): when :BOOLEAN is T but
	match failed, return 1 value NIL instead of 0 values;
	accept :RETURN-TYPE to return a LIST or a VECTOR instead of
	multiple values; also return a list when the number of match
	groups is more than MULTIPLE-VALUES-LIMIT

2008-09-23  Sam Steingold  <sds@gnu.org>

	* clhs.lisp (open-http): fix the Host: header
	Reported by Raymond Toy <raymond.toy@ericsson.com>

2008-09-19  Sam Steingold  <sds@gnu.org>

	* modules/i18n/gettext.c (SET-TEXTDOMAINDIR): remove unused variable
	* modules/syscalls/calls.c (STREAM-OPTIONS): ditto
	* modules/rawsock/rawsock.c (MAKE-SOCKADDR): ditto
	* genclisph.d (Lsuffix): remove unused global static
	(ULLsuffix): declare only when used
	(emit_typedef_test): use "%ld" for sizeof
	* spvw_debug.d (nobject_out1, bt_out): cast pointers to (uintP)
	before printing, print long ints as "%ld"
	* stream.d (xrealloc): remove unused function
	(TERMINAL-RAW, read_line, READ-INTEGER, READ-FLOAT)
	(WRITE-INTEGER): remove unused variable

2008-09-18  Sam Steingold  <sds@gnu.org>
